<resources>
    <string name="app_name">Convert Currency</string>
    <string name="str_swap_desc">Swap the from and to currency and there values</string>
    <string name="str_from">from</string>
    <string name="str_to">to</string>
    <string name="details">Details</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try Again</string>
    <string name="str_error">Error</string>
    <string name="str_ok">Ok</string>
    <string name="top_10_currencies_values">Top 10 Currencies Values</string>
    <string name="str_empty_from_currency_error">Please Select From Currency first to get Currencies Rates</string>
    <string name="convert_history_label">Latest 3 days Converts History</string>
    <string name="str_empty_history">You don\'t have an conversion for the last 3 days</string>
    <string name="convert_history_chart_label">Latest 3 days history chart</string>
</resources>