<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.samz.convertcurrency.ui.screens.home.HomeViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_30sdp"
                android:paddingTop="@dimen/_70sdp"
                android:visibility="@{viewModel.isLoading || !viewModel.errorMsg.isEmpty() ? View.GONE : View.VISIBLE}">


                <Spinner
                    android:id="@+id/sp_from"
                    onItemSelected="@{viewModel.onFromCurrencyChangeListener}"
                    selectedItem="@{viewModel.fromSelectedCurrency}"
                    spinnerItems="@{viewModel.currencySymbolsFromList}"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/spinner_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.37" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:background="@drawable/rounded_corners_bg"
                    android:contentDescription="@string/str_swap_desc"
                    android:onClick="@{()->viewModel.swapFromToCurrencies()}"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:src="@drawable/ic_swap_arrow"
                    app:layout_constraintBottom_toBottomOf="@id/sp_from"
                    app:layout_constraintEnd_toStartOf="@id/sp_to"
                    app:layout_constraintStart_toEndOf="@id/sp_from"
                    app:layout_constraintTop_toTopOf="@id/sp_from" />

                <Spinner
                    android:id="@+id/sp_to"
                    onItemSelected="@{viewModel.onToCurrencyChangeListener}"
                    selectedItem="@{viewModel.toSelectedCurrency}"
                    spinnerItems="@{viewModel.currencySymbolsToList}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/spinner_bg"
                    app:layout_constraintBottom_toBottomOf="@id/sp_from"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sp_from"
                    app:layout_constraintWidth_percent="0.37" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:afterTextChanged="@{viewModel.afterTextChanged}"
                    android:background="@drawable/rounded_corners_bg"
                    android:hint="@string/str_from"
                    android:inputType="numberDecimal"
                    android:minHeight="@dimen/_30sdp"
                    android:text="@={viewModel.fromValue}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@id/sp_from"
                    app:layout_constraintStart_toStartOf="@id/sp_from"
                    app:layout_constraintTop_toBottomOf="@id/sp_from" />


                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:visibility="@{viewModel.isConvertLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/et_from"
                    app:layout_constraintEnd_toStartOf="@id/et_to"
                    app:layout_constraintStart_toEndOf="@id/et_from"
                    app:layout_constraintTop_toTopOf="@id/et_from" />

                <TextView
                    android:id="@+id/et_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners_bg"
                    android:gravity="center"
                    android:minHeight="@dimen/_30sdp"
                    android:text="@{viewModel.toValue.isEmpty() ? @string/str_to : viewModel.toValue}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@id/sp_to"
                    app:layout_constraintStart_toStartOf="@id/sp_to"
                    app:layout_constraintTop_toTopOf="@id/et_from"
                    tools:text="@string/str_to" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@color/accentColor"
                    android:text="@string/details"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@id/sp_to"
                    app:layout_constraintStart_toStartOf="@id/sp_from"
                    app:layout_constraintTop_toBottomOf="@id/et_from"
                    app:layout_constraintWidth_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.isLoading? View.VISIBLE : View.GONE}"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{!viewModel.isLoading &amp;&amp; !viewModel.errorMsg.isEmpty() ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@{viewModel.isNetworkError ? @drawable/ic_network_error : @drawable/ic_error}"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/ic_error" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@{viewModel.errorMsg}"
                    android:textSize="@dimen/_14ssp"
                    tools:text="@string/something_went_wrong" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/primaryColor"
                    android:onClick="@{()->viewModel.initCurrenciesSymbols()}"
                    android:text="@string/try_again"
                    android:textColor="@color/white" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>